# todo_api_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  podman-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start-podman.ps1  start-podman.sh  stop-podman.ps1  stop-podman.sh  test-podman.ps1  test-podman.sh
.claude/skills/todo-api-knowledge/: README.md  config.json
.claude/skills/todo-api-knowledge/resources/: api_examples.json
.claude/skills/todo-api-knowledge/scripts/: api_client.py  quick_test.ps1  quick_test.sh
.github/workflows/: ci.yml  integration-tests.yml  simple-ci.yml  unit-tests.yml
app/: main.py
app/api/: artifacts.py  backup.py  reviews.py  storage.py  tasks.py  tree.py
app/celery_tasks/: backup_tasks.py  tasks.py  worker.py
app/core/: __init__.py  config.py  database.py
app/models/: artifact.py  comment.py  review.py  task.py  task_history.py
app/schemas/: artifact.py  backup.py  review.py  task.py
app/services/: backup_service.py  cas_service.py  git_service.py  hierarchical_id_service.py  review_service.py  task_service.py  tdd_hook_service.py
app/tasks/: backup_tasks.py  tasks.py  worker.py
migrations/: env.py
migrations/versions/: 000000000000_create_initial_tables.py  41f72c6474f3_add_hierarchical_id_structure.py
